--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>codewars-galaxy-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>CodeWars 3.0</title>
+    <meta name="description" content="CodeWars Website" />
+    <meta name="author" content="CodeWars" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
