--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CodeWars 3.0</title>
     <meta name="description" content="CodeWars Website" />
     <meta name="author" content="CodeWars" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/Hello.jpg" />
   </head>
 
   <body>
